# ComfyUI-DiscordSend

./: .env.example  .gitignore  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  REFACTOR_PRD.md  __init__.py  config.yaml.example  discord_image_node.py  discord_video_node.py  git_clones.json  pyproject.toml  requirements-bot.txt  requirements-nodes.txt  requirements.txt  traffic_stats.json
.Jules/: palette.md
.github/workflows/: git_clones.yml  test.yml
.jules/: bolt.md  sentinel.md
bot/: __init__.py  __main__.py  bot.py  config.py
bot/cogs/: __init__.py  admin.py  generate.py  history.py  queue.py  templates.py
discordsend_utils/: __init__.py  discord_api.py  github_integration.py  image_processing.py  prompt_extractor.py  sanitizer.py  workflow_builder.py
nodes/: __init__.py  base_node.py  image_node.py  video_node.py
scripts/: auto_review.sh
shared/: __init__.py  filename_utils.py  logging_config.py  path_utils.py
tests/: conftest.py  test_discord_mock.py  test_filename_utils.py  test_format_utils.py  test_github_validation.py  test_image_node_sanitization.py  test_media.py  test_message_builder.py  test_numpy_subprocess.py  test_path_security.py  test_path_utils.py  test_pil_batch_optimization.py  test_security_fixes.py  test_symlink_attack.py  test_utils.py  test_ux_tooltips.py  test_webhook_security.py  test_workflow.py
utils/: __init__.py  discord_api.py  prompt_extractor.py  workflow_builder.py
workflows/: DiscordSend_IMG2VID_Wan2.1_v1.json  DiscordSend_TXT2IMG_v1.json  DiscordSend_TXT2VID_AnimateDiff_v1.json
(+25 files in other folders)
